# mpsl-presenter-receiver

./: Cargo.toml  hid_keycode.py  macro.py
src/: app.rs  command.rs  line_buffer.rs  main.rs  nrf24_mode.rs  usb_logger.rs  usb_serial.rs
src/hid_report/: cursor.rs  keyboard.rs  mod.rs  mouse.rs
